--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 Django==1.7.3
+Markdown==2.5.2
 MySQL-python==1.2.5
 Pillow==2.7.0
 argparse==1.2.1
+django-admin-bootstrapped==2.3.5
 django-ajaximage==0.2.7
 django-appconf==0.6
 django-bootstrap-toolkit==2.15.0
@@ -9,9 +11,12 @@ django-bootstrap3-datetimepicker==2.2.3
 django-crispy-forms==1.4.0
 django-datetime-widget==0.9.3
 django-debug-toolbar==1.2.2
+django-filter==0.9.2
+django-floppyforms==1.3.0
 django-imagekit==3.2.5
 django-password-reset==0.7
 django-registration-redux==1.1
+djangorestframework==3.0.4
 pbr==0.10.7
 pilkit==1.1.12
 pytz==2014.10
@@ -22,3 +27,4 @@ virtualenv==12.0.5
 virtualenv-clone==0.2.5
 virtualenvwrapper==4.3.2
 wsgiref==0.1.2
+yweather==0.1
