--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-ajaximage==0.2.7
 django-appconf==0.6
 django-bootstrap-toolkit==2.15.0
 django-bootstrap3-datetimepicker==2.2.3
+django-chartit==0.1
 django-crispy-forms==1.4.0
 django-datetime-widget==0.9.3
 django-debug-toolbar==1.2.2
